--- a/pro/templates/admin_login.html
+++ b/pro/templates/admin_login.html
@@ -12,8 +12,12 @@
 				<input type="password" class="form-control" name="passwd" placeholder="请输入密码">
 			</div><br>
 			<div class="input-group input-group-lg">
-				<button type="submit" class="btn btn-default">登陆</button>
-				<button class="btn btn-default"><a href="{{ url_for('user_registered') }}">注册</a></button>
+				<button type="submit" class="btn btn-default btn-lg">登陆</button>
+				<button class="btn btn-default btn-lg"><a href="{{ url_for('user_registered') }}">注册</a></button>
+				<select class="btn btn-default btn-lg pull-right" name="usertype">
+					<option value=0>用户</option>
+					<option value=1>管理员</option>
+				</select>
 			</div>
 		</form>
 	</div>
