--- a/pro/templates/admin_title.html
+++ b/pro/templates/admin_title.html
@@ -57,7 +57,7 @@
             </div>
             <div id="collapseThree" class="panel-collapse collapse">
                 <div class="panel-body">
-                    <p><a href="{{ url_for('admin_info_edit',id=session['id']) }}" target="show">修改个人资料</a></p>
+                    <p><a href="{{ url_for('admin_info_edit',id=session['id'],level=session['level']) }}" target="show">修改个人资料</a></p>
                     <p><a href="{{ url_for('admin_pwd_update',id=session['id']) }}" target="show">修改密码</a></p>
                     <p><a href="{{ url_for('admin_picture_up',id=session['id'])}}" target="show">上传照片</a></p>
                     <p><a href="{{ url_for('admin_info_show',id=session['id'])}}" target="show">个人信息</a></p>
