--- a/pro/templates/admin_pwd_update.html
+++ b/pro/templates/admin_pwd_update.html
@@ -18,7 +18,7 @@
             <tr>
               <td colspan="2"><button class="btn bnt-danger">{{ adminpassquestion }}</button></td>
             </tr>
-            <form class="" role="form" method="POST" action="{{ url_for('admin_pwd_update',id=session['id']) }}">
+            <form class="" role="form" method="POST" action="{{ url_for('admin_pwd_update',id=session['id'],level=session['level']) }}">
             <tr>
                 <td><label for="adminpassreply" class=" control-label pull-right">密码保护答案:</label></td>
                 <td><input type="text" class="form-control" name="adminpassreply" 
