--- a/pro/templates/admin_edit.html
+++ b/pro/templates/admin_edit.html
@@ -22,61 +22,73 @@
                            placeholder="请输入管理员姓名">
                 </td>
             </tr>
+               <tr>
+                <td><label for="adminPassQuestion" class=" control-label pull-right">密码保护问题:</label></td>
+                <td><input type="text" class="form-control" name="adminPassQuestion" value="{{ tuple_result[0][2] }}" 
+                           placeholder="请输入密码保护问题">
+                </td>
+            </tr>
+           <tr> 
+                <td><label for="adminPassReply" class=" control-label pull-right">密码问题的答案:</label></td>
+                <td><input type="text" class="form-control" name="adminPassReply" value="{{ tuple_result[0][3] }}" 
+                           placeholder="请输入密码问题的答案">
+                </td>
+            </tr>
            <tr>
                 <td><label for="adminTrueName" class=" control-label pull-right">管理员真实姓名:</label></td>
-                <td><input type="text" class="form-control" name="adminTrueName" value="{{ tuple_result[0][2] }}" 
+                <td><input type="text" class="form-control" name="adminTrueName" value="{{ tuple_result[0][4] }}" 
                            placeholder="请输入管理员真实姓名">
                 </td>
             </tr>
            <tr> 
                 <td><label for="adminAddress" class=" control-label pull-right">管理员联系地址:</label></td>
-                <td><input type="text" class="form-control" name="adminAddress" value="{{ tuple_result[0][3] }}" 
+                <td><input type="text" class="form-control" name="adminAddress" value="{{ tuple_result[0][5] }}" 
                            placeholder="请输入管理员联系地址">
                 </td>
             </tr>
            <tr>
                 <td><label for="adminEmail" class=" control-label pull-right">管理员邮件:</label></td>
-                <td><input type="text" class="form-control" name="adminEmail" value="{{ tuple_result[0][4] }}" 
+                <td><input type="text" class="form-control" name="adminEmail" value="{{ tuple_result[0][6] }}" 
                            placeholder="请输入管理员邮件"></td>
             </tr>
            <tr>
                 <td><label for="adminSpecialty" class=" control-label pull-right">专业名称:</label></td>
-                <td><input type="text" class="form-control" name="adminSpecialty" value="{{ tuple_result[0][5] }}" 
+                <td><input type="text" class="form-control" name="adminSpecialty" value="{{ tuple_result[0][7] }}" 
                            placeholder="请输入专业名称"></td>            
             </tr>
            <tr>     
                 <td><label for="adminHuji" class=" control-label pull-right">户 籍:</label></td>
-                <td> <input type="text" class="form-control" name="adminHuji"  value="{{ tuple_result[0][6] }}" 
+                <td> <input type="text" class="form-control" name="adminHuji"  value="{{ tuple_result[0][8] }}" 
                            placeholder="请输入户 籍"></td> 
             </tr>
            <tr> 
                 <td><label for="adminIDcard" class=" control-label pull-right">身份证:</label></td>
-                <td><input type="text" class="form-control" name="adminIDcard"  value="{{ tuple_result[0][7] }}" 
+                <td><input type="text" class="form-control" name="adminIDcard"  value="{{ tuple_result[0][9] }}" 
                            placeholder="请输入身份证"></td>
             </tr>
            <tr>   
                 <td><label for="adminCsrq" class=" control-label pull-right">出生日期:</label></td>
-                <td><input type="text" class="form-control" name="adminCsrq" value="{{ tuple_result[0][8] }}" 
+                <td><input type="text" class="form-control" name="adminCsrq" value="{{ tuple_result[0][10] }}" 
                            placeholder="请输入出生日期"></td>
             </tr>
            <tr>  
                 <td><label for="adminJiguan" class=" control-label pull-right">籍 贯:</label></td>
-                <td><input type="text" class="form-control" name="adminJiguan"  value="{{ tuple_result[0][8] }}" 
+                <td><input type="text" class="form-control" name="adminJiguan"  value="{{ tuple_result[0][11] }}" 
                            placeholder="请输入籍 贯"></td>
             </tr>
            <tr>
                 <td><label for="adminAge" class=" control-label pull-right">管理员年龄:</label></td>
-                <td> <input type="text" class="form-control" name="adminAge"  value="{{ tuple_result[0][10] }}" 
+                <td> <input type="text" class="form-control" name="adminAge"  value="{{ tuple_result[0][12] }}" 
                            placeholder="请输入管理员年龄"></td>
             </tr>
            <tr>
                 <td><label for="adminSex" class=" control-label pull-right">管理员性别:</label></td>
-                <td><input type="text" class="form-control" name="adminSex" value="{{ tuple_result[0][11] }}" 
+                <td><input type="text" class="form-control" name="adminSex" value="{{ tuple_result[0][13] }}" 
                            placeholder="请输入管理员性别"></td>
             </tr>
             <tr>
                 <td><label for="adminPhone" class=" control-label pull-right">联系电话:</label></td>
-                <td> <input type="text" class="form-control" name="adminPhone" value="{{ tuple_result[0][12] }}" 
+                <td> <input type="text" class="form-control" name="adminPhone" value="{{ tuple_result[0][14] }}" 
                            placeholder="请输入联系电话"></td>
             </tr>
             <tr>
