--- a/pro/templates/users_list.html
+++ b/pro/templates/users_list.html
@@ -12,7 +12,7 @@
 			<button type="button" class="btn btn-primary btn-lg pull-right" style="font-size: 10px">
   				<span class="glyphicon glyphicon-edit"></span>修改
 			</button>	
-			<button type="button" class="btn btn-primary btn-lg pull-right" style="font-size: 10px">
+			<button type="button" class="btn btn-primary btn-lg pull-right" onclick="{{ url_for('user_add') }}" style="font-size: 10px">
   				<span class="glyphicon glyphicon-plus"></span>增加
 			</button>	
 			<p class="pull-right" style="font-size: 10px">
