--- a/pro/templates/users_list.html
+++ b/pro/templates/users_list.html
@@ -3,16 +3,16 @@
 <div class="users-list table-responsive">
 	<table class="table table-bordered table-hover">
 		<caption>
-			<button type="button" class="btn btn-primary btn-lg pull-left" style="font-size: 10px">
+			<button type="button" class="btn btn-info btn-lg pull-left" style="font-size: 10px">
   				<span class="glyphicon glyphicon-th-list"></span>用户列表
 			</button>	
-			<button type="button" class="btn btn-primary btn-lg pull-right" style="font-size: 10px">
+			<button type="button" class="btn btn-warning btn-lg pull-right" style="font-size: 10px">
   				<span class="glyphicon glyphicon-trash"></span>删除
 			</button>	
-			<button type="button" class="btn btn-primary btn-lg pull-right" style="font-size: 10px">
+			<button type="button" class="btn btn-warning btn-lg pull-right" style="font-size: 10px">
   				<span class="glyphicon glyphicon-edit"></span>修改
 			</button>	
-			<button type="button" class="btn btn-primary btn-lg pull-right"  style="font-size: 10px">
+			<button type="button" class="btn btn-warning btn-lg pull-right"  style="font-size: 10px">
   				<a href="{{ url_for('user_add') }}" name="show"><span class="glyphicon glyphicon-plus"></span>增加</a>
 			</button>	
 			<p class="pull-right" style="font-size: 10px">
