--- a/pro/templates/users_list.html
+++ b/pro/templates/users_list.html
@@ -40,8 +40,8 @@
                     <td>{{ result[3] }}</td>
                     <td>{{ result[4] }}</td>
                     <td>{{ result[5] }}</td>
-                    <td>查看</td>
-                    <td>删除</td>
+                    <td><a href="{{ url_for('admin_info_show',id=session['id'],level=session['level'])}}">查看</a></td>
+                    <td><a href="{{ url_for('info_delete',id=session['id'],level=session['level'])}}">删除</a></td>
                 </tr>
             {% endfor %}
 		</tbody>
