--- a/pro/templates/admin_list.html
+++ b/pro/templates/admin_list.html
@@ -6,14 +6,14 @@
 			<button type="button" class="btn btn-primary btn-lg pull-left" style="font-size: 10px">
   				<span class="glyphicon glyphicon-th-list"></span>管理员列表
 			</button>	
-			<button type="button" class="btn btn-primary btn-lg pull-right" style="font-size: 10px">
+			<button type="button" class="btn btn-warning btn-lg pull-right" style="font-size: 10px">
   				<span class="glyphicon glyphicon-trash"></span>删除
 			</button>	
-			<button type="button" class="btn btn-primary btn-lg pull-right" style="font-size: 10px">
+			<button type="button" class="btn btn-warning btn-lg pull-right" style="font-size: 10px">
   				<span class="glyphicon glyphicon-edit"></span>修改
 			</button>	
-			<button type="button" class="btn btn-primary btn-lg pull-right" style="font-size: 10px">
-  				<span class="glyphicon glyphicon-plus"></span>增加
+			<button type="button" class="btn btn-warning btn-lg pull-right" style="font-size: 10px">
+  				<a href="{{ url_for('admin_add')}}"><span class="glyphicon glyphicon-plus"></span>增加</a>
 			</button>	
 			<p class="pull-right" style="font-size: 10px">
 				 <label><input type="checkbox">全选</label>
