--- a/pro/templates/admin_add.html
+++ b/pro/templates/admin_add.html
@@ -98,7 +98,7 @@
                            placeholder="请输入联系电话"></td>
             </tr>
             <tr>
-                <td><button type="submit" class="btn btn-default pull-right">登录</button></td>
+                <td><button type="submit" class="btn btn-default pull-right">提交</button></td>
                 <td><button class="btn btn-default"  onclick="javascript:history.back(-1);">返回</button></td>
             </tr>
         </form>
